include/my_cpu.h
@@ -101,13 +101,11 @@ static inline void MY_RELAX_CPU(void)
   /* Changed from __ppc_get_timebase for musl compatibility */
   __builtin_ppc_get_timebase();
 #endif
-#elif defined __GNUC__ && (defined __arm__ || defined __aarch64__)
+#elif defined __GNUC__ && defined __riscv
+  __builtin_riscv_pause();
+#elif defined __GNUC__
   /* Mainly, prevent the compiler from optimizing away delay loops */
   __asm__ __volatile__ ("":::"memory");
-#else
-  int32 var, oldval = 0;
-  my_atomic_cas32_strong_explicit(&var, &oldval, 1, MY_MEMORY_ORDER_RELAXED,
-                                  MY_MEMORY_ORDER_RELAXED);
 #endif
 }
 
